# Autonomous-Enterprise-AI-Decision-System

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.kafka.yml  docker-compose.monitoring.yml  docker-compose.predict.yml  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy.yml
agents/: __init__.py  agent_core.py
agents/prompts/: __init__.py  few_shot_examples.py  system_prompt.py
agents/tools/: __init__.py  tool_airflow.py  tool_kafka.py  tool_mlflow.py  tool_prometheus.py  tool_slack.py
checkpoints/: epoch=11-step=36-v1.ckpt  epoch=11-step=36-v2.ckpt  epoch=11-step=36.ckpt  epoch=12-step=39.ckpt  epoch=19-step=60.ckpt  epoch=4-step=10-v1.ckpt  epoch=4-step=10.ckpt
conf/: MONITORING.md  agent_policy.json  alerting_rules.yml  alertmanager.yml  geo_regions.json  mlflow_local.yaml  mlflow_remote.yaml  prometheus.yml  streaming.conf
conf/feast/: serving.conf
conf/grafana/dashboards/: ml_metrics.json
data/: sample_generator.py  schema.yaml
data/docs/: enterprise_ai_system.md  ml_fundamentals.md  rag_guide.md
data/lake/checkpoints/streaming-to-delta/: .metadata.crc  metadata
deploy/helm/predict/: Chart.yaml  values.yaml
deploy/helm/predict/templates/: _helpers.tpl  (+2 more)
deploy/helm/rag/: Chart.yaml  values.yaml
deploy/k8s/: README.md
docs/: ARCHITECTURE.md  COST_ESTIMATE.md  SECURITY.md
features/: __init__.py  load_to_feast.py
features/feature_repo/: entities.py  feature_store.yaml  product_features.py  user_features.py
features/feature_repo/data/: online_store.db  product_features.parquet  registry.db  user_features.parquet
frontend/: package-lock.json
frontend/src/: App.jsx  index.css
frontend/src/api/: client.js
frontend/src/context/: StreamContext.jsx
frontend/src/pages/: Agent.css  Agent.jsx  Dashboard.css  Dashboard.jsx  DataIngestion.css  DataIngestion.jsx  Models.css  Models.jsx  Monitoring.css  Monitoring.jsx  Predictions.css  Predictions.jsx
infra/: README.md  docker-compose.airflow.yml  docker-compose.kafka.yml  docker-compose.spark-streaming.yml  run.sh  spark-streaming.service
infra/terraform/: .terraform.lock.hcl  README.md  main.tf
ingest/: README.md  __init__.py  kafka_producer.py  live_producer.py
ingest/dags/: README.md  __init__.py  auto_retrain_dag.py  batch_ingest_dag.py
mlflow_utils/: __init__.py  auto_promote.py  cli.py
models/: live_train.py
models/forecasting/: __init__.py  optuna_study.py  predict_service.py  train_forecast.py
notebooks/: 01_EDA.ipynb  02_baselines.ipynb  03_explainability.ipynb  04_rag_demo.ipynb  model_card.md
notebooks/executed/: 01_EDA_executed.ipynb  02_baselines_executed.ipynb
perf/: locustfile.py
policies/: data_access_policy.md
scripts/: fix_notebook.py  run_notebooks.sh
services/agent/: README.md
services/data-ingestion/: README.md
services/data-lake/: README.md
services/data-processing/: README.md
services/explain/: __init__.py  api.py
services/explain/templates/: shap_report.html
services/feature-store/: README.md
services/ml-platform/: README.md
services/predict/: Dockerfile  __init__.py  app.py  metrics.py  nginx.conf
services/rag/: Dockerfile  __init__.py  ingest_vectors.py  retriever.py
services/serving/: README.md
services/vector-db/: README.md
spark_jobs/: README.md  batch_to_delta.py  geo_lookup.py  streaming_to_delta.py  transforms.py
tests/: README.md  conftest.py  test_agent_core.py  test_agent_tools.py  test_auto_retrain_dag.py  test_batch_to_delta.py  test_explainability.py  test_feast_features.py  test_forecasting.py  test_generator.py  test_kafka_producer.py  test_mlflow_promote.py  test_notebook_metrics.py  test_predict_service.py  test_rag.py  test_streaming_transforms.py
tests/chaos/: __init__.py  chaos_utils.py  test_agent_retry.py  test_kafka_failure.py
tests/e2e/: Dockerfile.test  README.md  __init__.py  conftest.py  docker-compose.e2e.yml  test_pipeline_e2e.py
webapp/: __init__.py  main.py
webapp/routers/: agent.py  dashboard.py  ingestion.py  models.py  monitoring.py  notifications.py  predictions.py
(+205 files in other folders)
