[tool.poetry]
name = "enterprise-ai-decision-system"
version = "0.1.0"
description = "Autonomous Enterprise AI Decision System"
authors = ["Your Organization <team@your-org.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/your-org/enterprise-ai-decision-system"
documentation = "https://your-org.github.io/enterprise-ai-decision-system"
keywords = ["ai", "ml", "kafka", "spark", "langchain", "mlflow", "fastapi"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.poetry.dependencies]
python = "^3.11"

# API & Serving
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"

# Data Processing
pyspark = "^3.5.0"
delta-spark = "^3.0.0"
pandas = "^2.1.0"
polars = "^0.20.0"

# Feature Store
feast = "^0.35.0"

# ML & AI
mlflow = "^2.10.0"
ray = {extras = ["serve"], version = "^2.9.0"}
scikit-learn = "^1.4.0"
xgboost = "^2.0.0"
torch = "^2.1.0"

# LLM & Agents
langchain = "^0.1.0"
langchain-openai = "^0.0.5"
openai = "^1.10.0"

# Vector DB
chromadb = "^0.4.22"
pinecone-client = "^3.0.0"

# Message Queue
confluent-kafka = "^2.3.0"

# Orchestration
apache-airflow = "^2.8.0"

# Utilities
httpx = "^0.26.0"
python-dotenv = "^1.0.0"
tenacity = "^8.2.0"
structlog = "^24.1.0"

[tool.poetry.group.dev.dependencies]
# Testing
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.23.0"
pytest-mock = "^3.12.0"
hypothesis = "^6.92.0"

# Linting & Formatting
ruff = "^0.1.14"
mypy = "^1.8.0"
black = "^24.1.0"
isort = "^5.13.0"

# Security
bandit = "^1.7.0"
safety = "^2.3.0"

# Pre-commit
pre-commit = "^3.6.0"

# Documentation
mkdocs = "^1.5.0"
mkdocs-material = "^9.5.0"
mkdocstrings = {extras = ["python"], version = "^0.24.0"}

# Type stubs
types-requests = "^2.31.0"

[tool.poetry.scripts]
serve = "services.serving.api.main:run"
train = "services.ml_platform.training:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# Ruff Configuration
[tool.ruff]
target-version = "py311"
line-length = 100
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"tests/*" = ["ARG"]

[tool.ruff.isort]
known-first-party = ["services"]

# MyPy Configuration
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = [
    "feast.*",
    "mlflow.*",
    "ray.*",
    "pyspark.*",
    "delta.*",
    "confluent_kafka.*",
    "chromadb.*",
    "pinecone.*",
]
ignore_missing_imports = true

# Pytest Configuration
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
    "e2e: marks tests as end-to-end tests",
]

# Coverage Configuration
[tool.coverage.run]
source = ["services"]
branch = true
omit = ["tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
